<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bluetoothftpanalysis.BTTransferAnalysis" >

    <TextView
        android:id="@+id/SelectOptionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/openSelectText"
        android:textColor="#000080"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    
    <RadioGroup
        android:id="@+id/RadioBTNGrp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">   
		    <RadioButton 
		        android:id="@+id/selectManualOpt"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        android:text="@string/Option1" />
		        
		        
		    <RadioButton 
		        android:id="@+id/selectGPSOpt"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        android:text="@string/Option2" />
	</RadioGroup>

    <RelativeLayout
        android:id="@+id/manualOptResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:visibility="invisible"
        android:paddingTop="20dp">
	        
	       <EditText 
	        android:id="@+id/txtDistanceInput"
	        android:layout_width="175dp"
	        android:layout_height="wrap_content"
	        android:paddingTop="20dp"
	        android:hint="@string/txtEnterDistance"
	        
	        />
	
		    <Button
		        android:id="@+id/btnOpenFileExplorer"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
		        android:layout_toEndOf="@+id/txtDistanceInput"
		        android:layout_toRightOf="@+id/txtDistanceInput"
		        android:text="@string/btnFileExplorer"
		       />
        
    </RelativeLayout>
   
    <RelativeLayout  
        android:id="@+id/selectedFilePathLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:visibility="invisible"
        android:paddingTop="10dp">
        
        <TextView 
            android:id="@+id/SelectedFileLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/labelSelectedFile"
            android:textColor="#000080"
            
            />
        
        <TextView
            android:id="@+id/labelFilePath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/SelectedFileLabel"
            android:layout_toRightOf="@+id/SelectedFileLabel"
           />
        
        </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/btnSendFileViaBluetooth"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="invisible" >
        
        <ImageButton 
            
            android:id="@+id/btnSendFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/transfer_icon"
            android:contentDescription="@string/SendFile"/>
    </RelativeLayout>
   

</LinearLayout>